--- a/widget/css/comm.css
+++ b/widget/css/comm.css
@@ -1,3 +1,7 @@
+*{ margin:0; padding:0;}
+
 body{ font-size:1rem;}
 
 header{ position: fixed; top: 0; z-index: 9; background:#0ae; color:#fff; font-size:1.2rem; text-align:center; width: 100%; height: 2rem;}
+
+section{ position: fixed; top: 2rem; width: 100%;}
